# summa-virtue-alignment

./: .gitignore  AGENT.md  AGENTS.md  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: Home.py
docs/: annotation_guide.md  candidate_validation_summary.md  christian_virtue_dataset_card.md  christian_virtue_sft.md  connected_virtues_109_120_coverage.md  connected_virtues_109_120_notes.md  connected_virtues_109_120_validation.md  coverage_summary.md  dashboard_interaction_audit.md  data_model.md  fine_tune_with_summa_moral_graph.md  fortitude_closure_136_140_coverage.md  fortitude_closure_136_140_notes.md  fortitude_closure_136_140_validation.md  fortitude_parts_129_135_coverage.md  fortitude_parts_129_135_notes.md  fortitude_parts_129_135_validation.md  fortitude_tract_synthesis.md  full_corpus_workflow.md  justice_core_coverage.md  justice_core_notes.md  justice_core_validation.md  next_steps.md  normalization.md  objection_content_audit.md  owed_relation_tract_coverage.md  owed_relation_tract_notes.md  owed_relation_tract_validation.md  prudence_coverage.md  prudence_notes.md  prudence_validation.md  public_claim_map.md  religion_tract_coverage.md  religion_tract_notes.md  religion_tract_validation.md  repository_map.md  review_queue_guide.md  schema.md  source_policy.md  temperance_141_160_coverage.md  (+11 more)
requirements/: local-mps-py312.lock.txt
scripts/: README.md  audit_christian_virtue_frontier.py  build_christian_virtue_benchmark_improvements.py  build_christian_virtue_benchmark_packet.py  build_christian_virtue_citation_frontier_report.py  build_christian_virtue_full_corpus_report.py  build_christian_virtue_justice_guarded_report.py  build_christian_virtue_local_report.py  build_christian_virtue_positive_readout.py  build_christian_virtue_sft_dataset.py  build_christian_virtue_virtuebench_v2_diagnostic_report.py  build_connected_virtues_109_120_block.py  build_connected_virtues_109_120_review_queue.py  build_corpus_review_queue.py  build_corpus_workflow.py  build_fortitude_closure_136_140_block.py  build_fortitude_closure_136_140_review_queue.py  build_fortitude_parts_129_135_block.py  build_fortitude_parts_129_135_review_queue.py  build_justice_core_block.py  build_justice_core_review_queue.py  build_owed_relation_tract_block.py  build_owed_relation_tract_review_queue.py  build_pilot_slice.py  build_prudence_block.py  build_prudence_review_queue.py  build_religion_tract_block.py  build_religion_tract_review_queue.py  build_temperance_141_160_block.py  build_temperance_141_160_review_queue.py  build_temperance_closure_161_170_review_queue.py  build_theological_virtues_block.py  build_theological_virtues_review_queue.py  chat_christian_virtue_model.py  christian_virtue_small_common.sh  compare_christian_virtue_runs.py  compare_external_candidate_benchmarks.py  deploy_christian_virtue_chat_space.py  eval_christian_virtue_sft.py  generate_christian_virtue_predictions.py  (+27 more)
tests/: conftest.py  sft_test_utils.py  test_aquinas_virtue_grounding_probe.py  test_connected_virtues_109_120_app.py  test_connected_virtues_109_120_graph.py  test_connected_virtues_109_120_reports.py  test_corpus_app.py  test_corpus_workflow.py  test_crossrefs.py  test_dashboard.py  test_gradio_chat.py  (+65 more)
(+397 files in other folders)
