[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summa-moral-graph"
version = "0.3.0"
description = "Evidence-first textual, reviewed annotation, and graph tooling for the moral corpus of Aquinas's Summa Theologiae."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "lxml>=5,<6",
  "networkx>=3.3,<4",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "pyvis>=0.3,<1",
  "streamlit>=1.44,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<1",
]

[project.scripts]
summa-moral-graph = "summa_moral_graph.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
  "network: tests that fetch live New Advent pages",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"src/summa_moral_graph/annotations/prudence_spec.py" = ["E501"]
"src/summa_moral_graph/annotations/pilot_spec.py" = ["E501"]
"src/summa_moral_graph/annotations/corpus_spec.py" = ["E501"]
"src/summa_moral_graph/annotations/theological_virtues_spec.py" = ["E501"]
"src/summa_moral_graph/annotations/justice_core_spec.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests", "app"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
